--- a/demos/KNN_demo.ipynb
+++ b/demos/KNN_demo.ipynb
@@ -313,6 +313,7 @@
     }
    ],
    "source": [
+    "#WARNING: Do not run. Implementation is slow.\n",
     "#implementation by andrej Kaparthy et al.\n",
     "# We will now implement cross validation \n",
     "\n",
@@ -339,7 +340,7 @@
     "        x_train_cv = np.vstack(X_train_folds[0:fold]+X_train_folds[fold+1:])\n",
     "        x_test_cv = X_train_folds[fold]\n",
     "        #get also the labels\n",
-    "        y_train_cv = np.vstack(y_train_folds[0:fold]+y_train_folds[fold+1:])\n",
+    "        y_train_cv = np.hstack(y_train_folds[0:fold]+y_train_folds[fold+1:])\n",
     "        y_test_cv = y_train_folds[fold]\n",
     "        \n",
     "        num_train = x_train_cv.shape[0]\n",
